# PhysicsOneA

./: .gitignore  .venv  PhysicsOneA.py  README.md  build.sh  example.ipynb  importhandler.py  pyproject.toml  requirements-dev.txt  shell.nix
Lectures/: Kinematics1D.py  Kinematics2D.py  __init__.py  dependencies.py  helpers.py
src/PhysicsOneA/: Collision.py  EnergyConservation.py  Forces.py  Kinematics1D.py  Kinematics2D.py  NumericalMethods.py  Rotation.py  WorkAndEnergy.py  __init__.py  dependencies.py  helpers.py
src/PhysicsOneA.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/Physics_One_A_slayervictor_raaaainbow/: __init__.py
src/Physics_One_A_slayervictor_raaaainbow/Kinematics/: Kinematics.py  __init__.py
