[project]
name = "PhysicsOneA"
version = "0.1.0"
description = "A comprehensive physics utility package for analysis and visualization."
authors = [
    { name = "slayervictor", email = "your.email@example.com" },
    { name = "Raaaainbow", email = "your.email@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "sympy",
    "scipy",
    "pandas",
    "uncertainties",
    "matplotlib"
]

[project.urls]
Homepage = "https://github.com/slayervictor/PhysicsOneA"
Repository = "https://github.com/slayervictor/PhysicsOneA"
Issues = "https://github.com/slayervictor/PhysicsOneA/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
