[project]
name = "PhysicsOneA"
version = "0.1.1"
description = "A comprehensive physics utility package for analysis and visualization made for the Physics1 course at DTU"
authors = [
    { name = "Raaaainbow", email = "seba7204@gmail.com" },
    { name = "slayervictor"}
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "sympy",
    "scipy",
    "pandas",
    "uncertainties",
    "matplotlib"
]

[project.urls]
Homepage = "https://github.com/slayervictor/PhysicsOneA"
Repository = "https://github.com/slayervictor/PhysicsOneA"
Issues = "https://github.com/slayervictor/PhysicsOneA/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
